Fixed contrast issues in vim. Added pywal themed zathura

--- a/.config/spicetify/Themes/wal/user.css
+++ b/.config/spicetify/Themes/wal/user.css
@@ -4,7 +4,8 @@ body
 }
 
 /* Hide ad */
-#view-leaderboard-ad
+#view-leaderboard-ad,
+#view-billboard-ad
 {
   display: none !important;
 }
